# femaster-lab-1

./: .gitignore
code/: CMakeLists.txt  flake.nix  justfile
code/.helix/: config.toml  languages.toml
gpt-code/: CMakeLists.txt  geometry.geo  input.yaml  justfile
gpt-code/src/: boundary_condition.cpp  boundary_condition.h  element.cpp  element.h  fem_solver.cpp  fem_solver.h  main.cpp  mesh.cpp  mesh.h  node.cpp  node.h  problem_config.cpp  problem_config.h  utils.cpp  utils.h  vtk_writer.cpp  vtk_writer.h
mesh/: 1.geo
report/: report.typ  titlepage.typ  utils-environments.typ  utils.typ
